# tunaFlow

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  NOTICE  README.en.md  README.ko.md  README.md  index.html  install.sh  package-lock.json  package.json  tunaflow_references_2026-03-30.md  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  guardrail.rs  http_api.rs  lib.rs  main.rs  no_console.rs  notification_stub.rs
src-tauri/src/agents/: anthropic_sdk.rs  claude.rs  claude_sdk_session.rs  claude_window_guard.rs  codex.rs  codex_app_server.rs  context_hub.rs  crg.rs  embedder.rs  gemini.rs  gemini_sdk.rs  identity_analyzer.rs  loader.rs  mod.rs  openai_compat.rs  openai_sdk.rs  opencode.rs  rawq.rs  resolve.rs
src-tauri/src/bootstrap/: services.rs  window.rs
src-tauri/src/commands/: agent_detect.rs  agents.rs  artifacts.rs  attachments.rs  branches.rs  capabilities.rs  context_queries.rs  conventions_sync.rs  conversation_memory.rs  conversations.rs  document_index.rs  evaluation.rs  failure_lessons.rs  files.rs  insight.rs  insight_extract.rs  jobs.rs  memory_compression.rs  memory_topics.rs  memos.rs  messages.rs  mobile.rs  mod.rs  model_discovery.rs  models.rs  plans.rs  project_onboarding.rs  project_tools.rs  projects.rs  pty.rs  roundtable.rs  session_discovery.rs  skills.rs  test_runner.rs  tracing.rs  vector_search.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  schema.rs
src-tauri/tests/: db_integration.rs
(+452 files in other folders)
